--- a/wxplotjs/package.json
+++ b/wxplotjs/package.json
@@ -12,14 +12,13 @@
     "koa-mount": "^1.3.0",
     "koa-proxy": "^0.6.0",
     "koa-static": "^2.0.0",
-    "live-reload": "^1.1.0",
-    "nodemon": "^1.10.2",
     "uglify-js": "^2.4.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "mkdir -p bin; browserify -r ./src/plot.js:wxplot -t babelify | uglifyjs > bin/wxplot.min.js",
-    "build-dev": "mkdir -p dev; browserify -d -r ./src/plot.js:wxplot -t babelify > dev/wxplot.js"
+    "build-dev": "mkdir -p dev; browserify -d -r ./src/plot.js:wxplot -t babelify > dev/wxplot.js",
+    "build-dev-no-babel": "mkdir -p dev; browserify -d -r ./src/plot.js:wxplot > dev/wxplot.js"
   },
   "author": "Chris Matteri",
   "license": "MIT"
