--- a/wxplotjs/package.json
+++ b/wxplotjs/package.json
@@ -14,6 +14,9 @@
     "koa-static": "^2.0.0",
     "uglify-js": "^2.4.10"
   },
+  "browserify": {
+    "transform": ["babelify"]
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "mkdir -p bin; browserify -r ./src/plot.js:wxplot -t babelify | uglifyjs > bin/wxplot.min.js",
