--- a/wxplotjs/package.json
+++ b/wxplotjs/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "babelify": "^7.3.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2016": "^6.11.3",
+    "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "koa": "^1.2.2",
     "koa-mount": "^1.3.0",
     "koa-proxy": "^0.6.0",
     "koa-static": "^2.0.0",
-    "uglify-js": "^2.4.10"
+    "uglify-js": "^2.4.10",
+    "watchify": "^3.7.0"
   },
   "browserify": {
-    "transform": ["babelify"]
+    "transform": [
+      "babelify"
+    ]
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
