Added babelify transform to watchify command to ensure development will work on Firefox and Safari.

--- a/wxplotjs/package.json
+++ b/wxplotjs/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "mkdir -p bin; browserify -r ./src/plot.js:wxplot -t babelify | uglifyjs > bin/wxplot.min.js",
-    "watch": "mkdir -p dev; watchify -v -d -r ./src/plot.js:wxplot -o dev/wxplot.js"
+    "watch": "mkdir -p dev; watchify -v -d -r ./src/plot.js:wxplot -t babelify -o dev/wxplot.js"
   },
   "author": "Chris Matteri",
   "license": "MIT"
