--- a/wxplotjs/package.json
+++ b/wxplotjs/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "mkdir -p bin; browserify -r ./src/plot.js:wxplot -t babelify | uglifyjs > bin/wxplot.min.js",
-    "watch": "mkdir -p bin; watchify -v -d ./src/test.js -t babelify -o bin/wxplot-test.js"
+    "watch": "mkdir -p bin; watchify -v -d ./src/app.js -t babelify -o bin/wxplot.js"
   },
   "author": "Chris Matteri",
   "license": "MIT",
