--- a/wxplotjs/package.json
+++ b/wxplotjs/package.json
@@ -4,30 +4,19 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-es2016": "^6.11.3",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
-    "koa": "^1.2.2",
-    "koa-mount": "^1.3.0",
-    "koa-proxy": "^0.6.0",
-    "koa-static": "^2.0.0",
-    "uglify-js": "^2.4.10",
-    "watchify": "^3.7.0"
+    "react-scripts": "0.8.4"
   },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
+  "dependencies": {
+    "css-element-queries": "^0.3.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "mkdir -p bin; browserify ./src/app.js -t babelify | uglifyjs > bin/wxplot.min.js",
-    "watch": "mkdir -p bin; watchify -v -d ./src/app.js -t babelify -o bin/wxplot.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom"
   },
   "author": "Chris Matteri",
-  "license": "MIT",
-  "dependencies": {
-    "css-element-queries": "^0.3.2"
-  }
+  "license": "MIT"
 }
