--- a/wxplotjs/package.json
+++ b/wxplotjs/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "node-sass": "^4.12.0",
     "react-scripts": "3.0.1"
   },
   "dependencies": {
